clusters/cl01tl/manifests/garage-b/ReferenceGrant-allow-web-assets.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: allow-web-assets
  namespace: garage-b
  labels:
    app.kubernetes.io/name: allow-web-assets
    app.kubernetes.io/instance: garage-b
    app.kubernetes.io/part-of: garage-b
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: web-assets
  to:
    - group: ""
      kind: Service
      name: cluster-b
