clusters/cl01tl/manifests/garage-b/Service-garage-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage-ui
  namespace: garage-b
  labels:
    helm.sh/chart: garage-ui-0.13.0
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/instance: garage-b
    app.kubernetes.io/version: "v0.13.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: garage-ui
    app.kubernetes.io/instance: garage-b
