clusters/cl01tl/manifests/garage-b/HTTPRoute-cluster-b-s3.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cluster-b-s3
  namespace: garage-b
  labels:
    app.kubernetes.io/name: cluster-b-s3
    app.kubernetes.io/instance: garage-b
    app.kubernetes.io/part-of: garage-b
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "b.s3.alexlebens.dev"
    - "*.b.s3.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: cluster-b
          port: 3900
          weight: 1
