clusters/cl01tl/manifests/garage-b/HTTPRoute-cluster-b-ui.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cluster-b-ui
  namespace: garage-b
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Object Storage (B)"
    gethomepage.dev/description: "Garage"
    gethomepage.dev/group: "Storage"
    gethomepage.dev/icon: "sh-garage.webp"
    gethomepage.dev/siteMonitor: "http://garage-ui.garage-b:80"
    gethomepage.dev/statusStyle: "dot"
    gethomepage.dev/weight: "150"
  labels:
    app.kubernetes.io/name: cluster-b-ui
    app.kubernetes.io/instance: garage-b
    app.kubernetes.io/part-of: garage-b
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: traefik-gateway
      namespace: traefik
  hostnames:
    - "b-ui.s3.alexlebens.dev"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: garage-ui
          port: 80
          weight: 1
